--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>Two Partners In Grime</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="css/index.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -26,7 +26,7 @@
 					</header>
 
 				<!-- Menu -->
-					<!-- <nav id="menu">
+					<nav id="menu">
 						<div class="inner">
 							<h2>Menu</h2>
 							<ul class="links">
@@ -38,7 +38,7 @@
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
-					</nav> -->
+					</nav>
 
 				<!-- Banner -->
 					<section id="banner">
@@ -172,12 +172,12 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="js/jquery.min.js"></script>
+			<script src="js/jquery.scrollex.min.js"></script>
+			<script src="js/browser.min.js"></script>
+			<script src="js/breakpoints.min.js"></script>
+			<script src="js/util.js"></script>
+			<script src="js/main.js"></script>
 
 	</body>
 </html>
