added desktop styling for nav, header, main content and about section of index.html

--- a/index.html
+++ b/index.html
@@ -4,29 +4,36 @@
 	<title>Two Partners In Grime</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+	 crossorigin="anonymous">
 	<link rel="stylesheet" href="css/index.css" />
 </head>
 <body>
-	<div class="pageWrapper">
-		<header class="header">
-			<h1><a href="index.html">Two Partners In Grime</a></h1>
-			<button>
-				<a href="#menu">Menu <i class="fas fa-bars"></i></a>
-			</button>
-		</header>
+	<div class="container" id="home">
 		<nav>
 			<div class="inner">
 				<h2>Menu</h2>
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="generic.html">Generic</a></li>
-					<li><a href="elements.html">Elements</a></li>
-					<li><a href="#">Log In</a></li>
-					<li><a href="#">Sign Up</a></li>
-				</ul>
-				<a href="#" class="close">Close</a>
-			</div>
-		</nav> <!-- end Navigation-->
+				<li><a href="elements.html">Elements</a></li>
+				<li><a href="#">Log In</a></li>
+				<li><a href="#">Sign Up</a></li>
+			</ul>
+			<a href="#" class="close">Close</a>
+		</div>
+	</nav> <!-- end Navigation-->
+	<header class="header">
+		<div>
+			<h1><a href="index.html">TWO PARTNERS IN GRIME</a></h1>
+		</div>
+		<div>
+			<button>
+				<a href="#menu">MENU <i class="fas fa-bars"></i></a>
+			</button>
+		</div>
+	</header>
+	<div class="pageWrapper">
 		<section class="banner">
 			<div class="banner-inner">
 				<h2>Two Partners In Grime</h2>
@@ -35,15 +42,19 @@
 		</section>
 		<section class="about">
 			<h3>Two Partners In Grime in Pasco, WA</h3>
-			<p>Choosing the right maid or janitorial service in the Tri-Cities, WA for your home is easy when you consider the dedicated team at Two 
-			Partners In Grime in Pasco. We’re committed to delivering fantastic results, and we offer a 100% satisfaction guarantee. We are also licensed and bonded so 
-			you can be confident knowing that we’ll be respectful of your home and your belongings.</p>
-			<p>We create an individualized cleaning strategy, which we'll put together during your free in-home analysis. These
+			<div class="split">
+				<p>Choosing the right maid or janitorial service in the Tri-Cities, WA for your home is easy when you consider the dedicated team at Two 
+				Partners In Grime in Pasco. We’re committed to delivering fantastic results, and we offer a 100% satisfaction guarantee. We are also licensed and bonded so 
+				you can be confident knowing that we’ll be respectful of your home and your belongings.</p>
+
+				<p>We create an individualized cleaning strategy, which we'll put together during your free in-home analysis. These
 				complimentary and informative sessions allow our prospective clients to learn about our thorough cleaning systems and
 				to discuss their individual preferences. From these consultations, we can provide an estimate that’s based on a
-				cleaning plan tailored to the unique needs of each household. You’ll also benefit from our punctual staff members and friendly, professional services.</p>
-			<p>Treat your home and yourself to a superb maid service that will create a healthy, bright environment with every
-				cleaning visit. If you live in Kennewick, WA, call Merry Maids of Kennewick today to schedule your free estimate.</p></p>
+				cleaning plan tailored to the unique needs of each household.</p>
+			</div>
+
+				<p>Treat your home and yourself to a superb maid service that will create a healthy, bright environment with every
+				cleaning visit. If you live in Kennewick, WA, call Merry Maids of Kennewick today to schedule your free estimate.</p>	
 		</section>
 		<section class="contact">
 			<h3>Get in touch</h3>
@@ -53,9 +64,10 @@
 				<input type="text" name="name" placeholder="Your Name">
 				<input type="tel" name="telephone" placeholder="Your Telephone Number">
 				<textarea name="message" placeholder="Test Message"></textarea>
-				<button type="submit">Send Test</button>
+				<button type="submit">Send</button>
 			</form>
 		</section>
 	</div> <!-- end pageWrapper-->
+</div> <!-- end container-->
 </body>
 </html>
