added temp styling to the contact section

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 			<h1><a href="index.html">TWO PARTNERS IN GRIME</a></h1>
 		</div>
 		<div>
-			<button>
+			<!-- <button>
 				<a href="#menu">MENU <i class="fas fa-bars"></i></a>
-			</button>
+			</button> -->
 		</div>
 	</header>
 	<div class="pageWrapper">
@@ -53,8 +53,8 @@
 				cleaning plan tailored to the unique needs of each household.</p>
 			</div>
 
-				<p>Treat your home and yourself to a superb maid service that will create a healthy, bright environment with every
-				cleaning visit. If you live in Kennewick, WA, call Merry Maids of Kennewick today to schedule your free estimate.</p>	
+				<p>Treat your home and yourself to a superb maid and janitorial service that will create a healthy, bright environment with every
+				cleaning visit. If you live or work in the Tri-Cities, WA, call Two Partners In Grime today to schedule your free estimate.</p>	
 		</section>
 		<section class="contact">
 			<h3>Get in touch</h3>
@@ -63,8 +63,8 @@
 				<input type="email" name="email" placeholder="Your email">
 				<input type="text" name="name" placeholder="Your Name">
 				<input type="tel" name="telephone" placeholder="Your Telephone Number">
-				<textarea name="message" placeholder="Test Message"></textarea>
-				<button type="submit">Send</button>
+				<textarea name="message" placeholder="How can we help you?"></textarea>
+				<button type="submit" class="btn">Send</button>
 			</form>
 		</section>
 	</div> <!-- end pageWrapper-->
