--- a/index.html
+++ b/index.html
@@ -1,113 +1,16 @@
-<!doctype html>
-<html lang="en">
-
+<!DOCTYPE html>
+<html>
 <head>
-	<!-- Required meta tags -->
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-	<!-- Bootstrap CSS -->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
-		integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-	<link rel="stylesheet" href="css/index.css">
-
-	<title>Hello, world!</title>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>Two Partners In Grime</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" media="screen" href="main.css">
+	<script src="main.js"></script>
 </head>
-
 <body>
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-		<div class="container">
+	
+	
 
-  <a class="navbar-brand" href="#">Two Partners In Grime</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-				<ul class="navbar-nav ml-auto">
-					<li class="nav-link active"><a href="Index.html" class="nav-link">Home</a></li>
-					<li class="nav-link"><a href="#" class="nav-link">About Us</a></li>
-					<li class="nav-link"><a href="#" class="nav-link">Services</a></li>
-					<li class="nav-link"><a href="#" class="nav-link">Contact Us</a></li>
-				</ul>
-			</div>
-		</div>
-	</nav>			
-																								<!-- END MENU -->
-
-		<div class="jumbotron jumbotron-fluid jumbotron--dark">
-			<div class="container">
-				<h1 class="display-4">Two Partners In Grime</h1>
-				<p class="lead">Welcome to the family</p>
-			</div>
-		</div>
-
-		<div class="container">
-
-			<div class="row">
-				<div class="col-sm-12 col-md-6">
-					<div class="card mb-4">
-					<div class="card-body">
-						<h5 class="card-title">Why Us?</h5>
-						<p class="card-text">Choosing the right maid or janitorial service in the Tri-Cities, WA for your home is easy when you consider the dedicated team at Two Partners In Grime in Pasco. We’re committed to delivering fantastic results, and we offer a 100% satisfaction guarantee. We are also licensed and bonded so you can be confident knowing that we’ll be respectful of your home and your belongings.</p>
-						<!-- <a href="" class="card-link">Learn More</a> -->
-					</div>
-				</div>
-			</div>
-			<div class="col-sm-12 col-md-6">
-				<div class="card mb-4">
-					<div class="card-body">
-						<h5 class="card-title">Free Professional Consultation</h5>
-						<p class="card-text">We create an individualized cleaning strategy, which we'll put together during your free in-home analysis. These complimentary and informative sessions allow our prospective clients to learn about our thorough cleaning systems and to discuss their individual preferences. From these consultations, we can provide an estimate that’s based on a cleaning plan tailored to the unique needs of each household.</p>
-						<!-- <a href="" class="card-link">Learn More</a> -->
-					</div>
-				</div>
-			</div>
-			<div class="col-sm-12">
-				<div class="card mb-4">
-					<div class="card-body">
-						<h5 class="card-title">Contact Us Today!</h5>
-						<p class="card-text">Treat your home and yourself to a superb maid and janitorial service that will create a healthy, bright environment with every cleaning visit. If you live or work in the Tri-Cities, WA, call Two Partners In Grime today to schedule your free estimate.</p>
-						<!-- <a href="" class="card-link">Learn More</a> -->
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<div class="row mt-sm-4 mt-md-0">
-			<div class="col-sm-12 col-md-8">
-				<h3>Contact us</h3>
-				<p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid amet aliquam a quis debitis odio, enim consequuntur possimus quaerat eum. Iusto hic corporis minima enim explicabo, voluptatem autem inventore similique!</p>
-			</div>
-			<div class="col-sm-12 col-md-4">
-				<h3 class="mb-4">Secondary Menu</h3>
-				<ul class="nav flex-column nav-pills">
-					<li class="nav-item"><a href="" class="nav-link active"></a></li>
-					<li class="nav-item"><a href="" class="nav-link"></a></li>
-					<li class="nav-item"><a href="" class="nav-link"></a></li>
-					<li class="nav-item"><a href="" class="nav-link"></a></li>
-				</ul>
-			</div>
-		</div>
-	</div>
-
-
-		
-
-
-
-		
-	<!-- Optional JavaScript -->
-	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-		crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
-		integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
-		crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
-		integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
-		crossorigin="anonymous"></script>
 </body>
-
 </html>
